# BPShift

./: .gitignore  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  NOTICE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: CROSS_PLATFORM.md  INSTALL.md  LLM_AGNOSTIC.md  SURGERY_BACKEND.md  UE_VERSIONS.md
examples/dummy-axes-fixture/: README.md
examples/dummy-axes-fixture/expected/: README.md
python/: bpmigrate.py  bytecode_decompiler.py  format_migration.py  kismet_parser.py  scenario_generator.py
skill/: inspect-bp.md  migrate-bp.md
tests/: test_caller_plan_accuracy.py  test_determinism.py
tools/UAssetGUI/: README.md
ue-plugin/BPMigration/: BPMigration.uplugin
ue-plugin/BPMigration/Source/BPMigration/: BPMigration.Build.cs
ue-plugin/BPMigration/Source/BPMigration/Private/: BPGraphWalk.cpp  BPMigrationModule.cpp  CallFunctionRewriter.cpp  DumpBPGraphCommandlet.cpp  DumpCallSitesCommandlet.cpp  DumpClassReflectionCommandlet.cpp  RewriteCallersCommandlet.cpp  SnapshotBPBehaviorCommandlet.cpp  VerifyCallersCommandlet.cpp  VerifyMigrationCommandlet.cpp
ue-plugin/BPMigration/Source/BPMigration/Private/Tests/Utils/: BPBehaviorSnapshot.cpp  BPBehaviorSnapshot.h
ue-plugin/BPMigration/Source/BPMigration/Public/: BPGraphWalk.h  BPMigrationModule.h  CallFunctionRewriter.h  DumpBPGraphCommandlet.h  DumpCallSitesCommandlet.h  DumpClassReflectionCommandlet.h  RewriteCallersCommandlet.h  SnapshotBPBehaviorCommandlet.h  VerifyCallersCommandlet.h  VerifyMigrationCommandlet.h
