[project]
name = "bpmigrate"
version = "0.1.0"
description = "Migrate Unreal Engine Blueprints to C++ with verified behavior parity."
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "BPShift contributors" }]
readme = "README.md"
keywords = ["unreal", "blueprint", "migration", "ue5", "uasset"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
]
# stdlib only; no install-time deps.
# Python 3.10 needs `tomli` for config files; 3.11+ ships tomllib.
dependencies = []

[project.optional-dependencies]
toml-py310 = ["tomli>=2.0; python_version<'3.11'"]

[project.scripts]
bpmigrate = "bpmigrate:main"

[project.urls]
Homepage = "https://github.com/SeanAblur/BPShift"
Issues = "https://github.com/SeanAblur/BPShift/issues"

# Example bpmigrate config (the same keys are accepted in
# .bpmigrate.toml or bpmigrate.toml at the project root).
[tool.bpmigrate]
# project_root = "C:/Path/To/YourProject"
# uproject = "C:/Path/To/YourProject/YourGame.uproject"
# ue_cmd = "C:/Program Files/Epic Games/UE_5.2/Engine/Binaries/Win64/UnrealEditor-Cmd.exe"
# uassetgui = ""        # default: bundled tools/UAssetGUI/UAssetGUI.exe
# ue_version = "UE5_2"  # passed to UAssetGUI tojson
# tmpdir = ""            # default: <system temp>/BPShift

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = ["bpmigrate", "bytecode_decompiler", "format_migration", "kismet_parser", "scenario_generator"]
package-dir = { "" = "python" }
